syntax = "proto3";

option go_package = "protos/colodigits";

message ColodigitID {
    string id = 1;
}

message Colodigit {
    optional ColodigitID id = 1;
    int32 digit = 2;
    bytes r = 3;
    bytes g = 4;
    bytes b = 5;
}

message NoParamIO {}

service ColodigitService {
    rpc AddColodigit(Colodigit) returns (Colodigit);
    rpc DeleteColodigit(ColodigitID) returns (NoParamIO);
    rpc ModifyColodigit(Colodigit) returns (NoParamIO);
    rpc GetColodigits(NoParamIO) returns (stream Colodigit);
}